--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -20,3 +20,42 @@
 .App-link {
   color: #09d3ac;
 }
+
+#page-top {
+  height: 100%
+}
+
+.masthead {
+  padding-top: calc(2rem + 74px);
+  padding-bottom: 5rem;
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+}
+
+.masthead .masthead-heading {
+  font-size: 2.75rem;
+  line-height: 2.75rem;
+}
+
+.masthead .masthead-subheading {
+  font-size: 1.25rem;
+}
+
+.masthead .masthead-avatar {
+  width: 15rem;
+}
+
+@media (min-width: 992px) {
+  .masthead {
+    padding-top: calc(2rem + 104px);
+    padding-bottom: 5rem;
+  }
+  .masthead .masthead-heading {
+    font-size: 4rem;
+    line-height: 3.5rem;
+  }
+  .masthead .masthead-subheading {
+    font-size: 1.5rem;
+  }
+}
