--- a/src/components/TodoPage/AddTodo/AddTodo.scss
+++ b/src/components/TodoPage/AddTodo/AddTodo.scss
@@ -1,4 +1,5 @@
-form {
+#ria-add-todo-page {
+    form {
     padding: 1rem;
 
     input {
@@ -10,4 +11,5 @@ form {
         margin-top: 1rem;
         margin-bottom: 1rem;
     }
+}
 }
