--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 @import '~carbon-components/scss/globals/scss/styles.scss';
-$font-prefix: "~@ibm/plex";
+$font-prefix: '~@ibm/plex';
 
-@import "~@ibm/plex/scss/ibm-plex.scss";
+@import '~@ibm/plex/scss/ibm-plex.scss';
 
 html {
   height: 100%;
